--- a/pyQgis3_1/ui/MainWindow.ui
+++ b/pyQgis3_1/ui/MainWindow.ui
@@ -33,6 +33,38 @@
      <height>23</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuVector_Layers">
+    <property name="title">
+     <string>Vector</string>
+    </property>
+    <widget class="QMenu" name="menuGDAL">
+     <property name="title">
+      <string>GDAL</string>
+     </property>
+     <addaction name="actionShapefile"/>
+     <addaction name="actiondxf"/>
+     <addaction name="actiongeopackage"/>
+    </widget>
+    <addaction name="actionQgisInterface"/>
+    <addaction name="menuGDAL"/>
+    <addaction name="actionpostgis"/>
+    <addaction name="actioncsv"/>
+    <addaction name="actiongpx"/>
+    <addaction name="actionSpatiaLite"/>
+    <addaction name="actionMySQL"/>
+    <addaction name="actionQFS"/>
+   </widget>
+   <widget class="QMenu" name="menuRaster">
+    <property name="title">
+     <string>Raster</string>
+    </property>
+    <addaction name="actionTif"/>
+    <addaction name="actionGeopackage"/>
+    <addaction name="actionPostGIS"/>
+    <addaction name="actionWCS"/>
+   </widget>
+   <addaction name="menuVector_Layers"/>
+   <addaction name="menuRaster"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QDockWidget" name="dockWidget">
@@ -41,6 +73,76 @@
    </attribute>
    <widget class="QWidget" name="layerTreeDockWidget"/>
   </widget>
+  <action name="actionQgisInterface">
+   <property name="text">
+    <string>QgisInterface</string>
+   </property>
+  </action>
+  <action name="actionpostgis">
+   <property name="text">
+    <string>PostGIS</string>
+   </property>
+  </action>
+  <action name="actioncsv">
+   <property name="text">
+    <string>CSV</string>
+   </property>
+  </action>
+  <action name="actiongpx">
+   <property name="text">
+    <string>GPX</string>
+   </property>
+  </action>
+  <action name="actionSpatiaLite">
+   <property name="text">
+    <string>SpatiaLite</string>
+   </property>
+  </action>
+  <action name="actionShapefile">
+   <property name="text">
+    <string>shapefile</string>
+   </property>
+  </action>
+  <action name="actiondxf">
+   <property name="text">
+    <string>dxf</string>
+   </property>
+  </action>
+  <action name="actiongeopackage">
+   <property name="text">
+    <string>geopackage</string>
+   </property>
+  </action>
+  <action name="actionMySQL">
+   <property name="text">
+    <string>MySQL</string>
+   </property>
+  </action>
+  <action name="actionQFS">
+   <property name="text">
+    <string>WFS</string>
+   </property>
+  </action>
+  <action name="actionTif">
+   <property name="text">
+    <string>Tiff</string>
+   </property>
+  </action>
+  <action name="actionGeopackage">
+   <property name="text">
+    <string>Geopackage</string>
+   </property>
+  </action>
+  <action name="actionPostGIS">
+   <property name="text">
+    <string>PostGIS</string>
+   </property>
+  </action>
+  <action name="actionWCS">
+   <property name="text">
+    <string>WCS</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="../resources/res.qrc"/>
