--- a/basepyqgis/res/res.qrc
+++ b/basepyqgis/res/res.qrc
@@ -2,4 +2,9 @@
   <qresource prefix="ico">
     <file>qgis.ico</file>
   </qresource>
+  <qresource prefix="images">
+    <file>mActionPan.png</file>
+    <file>mActionZoomIn.png</file>
+    <file>mActionZoomOut.png</file>
+  </qresource>
 </RCC>
