--- a/sample_qgs_vector_raster/ui/MainWindow.ui
+++ b/sample_qgs_vector_raster/ui/MainWindow.ui
@@ -42,7 +42,20 @@
     <addaction name="actionSave"/>
     <addaction name="actionClose"/>
    </widget>
+   <widget class="QMenu" name="menuAdd_Vector_Layer">
+    <property name="title">
+     <string>Add Vector Layer</string>
+    </property>
+    <addaction name="actionOGR_data_provider_ogr"/>
+    <addaction name="actionOGR_data_provider_ogr_Directory"/>
+    <addaction name="actionGPX_data_provider_gpx"/>
+    <addaction name="actionDelimited_text_file_provider_delimitedtext"/>
+    <addaction name="actionSpatiaLite_data_provider_spatialite"/>
+    <addaction name="actionMemory_data_provider_memory"/>
+    <addaction name="actionWFS_web_feature_service_data_provider_wfs"/>
+   </widget>
    <addaction name="menuProject"/>
+   <addaction name="menuAdd_Vector_Layer"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QDockWidget" name="dockWidget">
@@ -69,6 +82,41 @@
   <action name="actionSave">
    <property name="text">
     <string>Save</string>
+   </property>
+  </action>
+  <action name="actionGPX_data_provider_gpx">
+   <property name="text">
+    <string>GPX data provider(gpx)</string>
+   </property>
+  </action>
+  <action name="actionDelimited_text_file_provider_delimitedtext">
+   <property name="text">
+    <string>Delimited text file provider(delimitedtext)</string>
+   </property>
+  </action>
+  <action name="actionSpatiaLite_data_provider_spatialite">
+   <property name="text">
+    <string>SpatiaLite data provider(spatialite)</string>
+   </property>
+  </action>
+  <action name="actionMemory_data_provider_memory">
+   <property name="text">
+    <string>Memory data provider(memory)</string>
+   </property>
+  </action>
+  <action name="actionWFS_web_feature_service_data_provider_wfs">
+   <property name="text">
+    <string>WFS(web feature service) data provider(wfs)</string>
+   </property>
+  </action>
+  <action name="actionOGR_data_provider_ogr">
+   <property name="text">
+    <string>OGR data provider(ogr) | File</string>
+   </property>
+  </action>
+  <action name="actionOGR_data_provider_ogr_Directory">
+   <property name="text">
+    <string>OGR data provider(ogr) | Directory</string>
    </property>
   </action>
  </widget>
