增加identify map tool

--- a/sample_mapcanvas_maptool_layertree/res/res.qrc
+++ b/sample_mapcanvas_maptool_layertree/res/res.qrc
@@ -5,6 +5,7 @@
   <qresource prefix="images">
     <file>mActionPan.png</file>
     <file>mActionZoomIn.png</file>
-    <file>mActionZoomOut.png</file>
+    <file>mActionZoomOut.png</file>>
+    <file>mActionIdentify.png</file>
   </qresource>
 </RCC>
