添加自定义maptool

--- a/sample_mapcanvas_maptool_layertree/res/res.qrc
+++ b/sample_mapcanvas_maptool_layertree/res/res.qrc
@@ -5,7 +5,8 @@
   <qresource prefix="images">
     <file>mActionPan.png</file>
     <file>mActionZoomIn.png</file>
-    <file>mActionZoomOut.png</file>>
+    <file>mActionZoomOut.png</file>
     <file>mActionIdentify.png</file>
+    <file>mActionAddBasicRectangle.png</file>
   </qresource>
 </RCC>
