增加selection by value 和 selection by expression

--- a/using_vector_layers/res/res.qrc
+++ b/using_vector_layers/res/res.qrc
@@ -8,5 +8,10 @@
     <file>mActionZoomOut.png</file>
     <file>mActionIdentify.png</file>
     <file>mActionAddBasicRectangle.png</file>
+    <file>mActionDeselectAll.png</file>
+    <file>mActionSelectAll.png</file>
+    <file>mIconExpressionSelect.png</file>
+    <file>mIconFormSelect.png</file>
+    <file>mIconSelectRemove.png</file>
   </qresource>
 </RCC>
