vector图层增加获取子图层并添加

--- a/using_vector_layers/ui/MainWindow.ui
+++ b/using_vector_layers/ui/MainWindow.ui
@@ -137,6 +137,11 @@
     <string>WMS data provider(wms)</string>
    </property>
   </action>
+  <action name="actionGeoPackage">
+   <property name="text">
+    <string>OGR data provider(ogr) | GeoPackage</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="../res/res.qrc"/>
